added soft delete feature for Species, Breeds, FurColors, CoatTypes

--- a/ShelterEvidency/Views/ComboBoxSettingsView.xaml
+++ b/ShelterEvidency/Views/ComboBoxSettingsView.xaml
@@ -5,12 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                 FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="1800" d:DesignWidth="600">
 
-    <StackPanel Margin="10">
+    <UserControl.Resources>
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+    </UserControl.Resources>
+    
+    <StackPanel Margin="10" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <materialDesign:Card Margin="10"
              materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
@@ -42,7 +48,12 @@
 
                 </Grid>
 
-                <DataGrid  Grid.Row="1" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedSpecies, Mode=OneWayToSource}" Margin="10,10,10,0"/>
+                <DataGrid  Grid.Row="1" SelectionMode="Single" AutoGenerateColumns="False" ColumnWidth="*" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedSpecies, Mode=OneWayToSource}" Margin="10,10,10,0">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID druhu" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="Název druhu" Binding="{Binding SpeciesName}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
@@ -95,7 +106,13 @@
 
                 </Grid>
 
-                <DataGrid  Grid.Row="1" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedBreed, Mode=OneWayToSource}" Margin="10,10,10,0"/>
+                <DataGrid  Grid.Row="1" SelectionMode="Single" AutoGenerateColumns="False" ColumnWidth="*" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedBreed, Mode=OneWayToSource}" Margin="10,10,10,0">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID plemena" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="Název plemena" Binding="{Binding BreedName}"/>
+                        <DataGridTextColumn Header="ID druhu" Binding="{Binding SpeciesID}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
@@ -152,7 +169,12 @@
 
                 </Grid>
 
-                <DataGrid  Grid.Row="1" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedCoatType, Mode=OneWayToSource}" Margin="10,10,10,0"/>
+                <DataGrid  Grid.Row="1" SelectionMode="Single" AutoGenerateColumns="False" ColumnWidth="*"  SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedCoatType, Mode=OneWayToSource}" Margin="10,10,10,0">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID typu srsti" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="Název typu srsti" Binding="{Binding CoatTypeName}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
@@ -204,7 +226,12 @@
 
                 </Grid>
 
-                <DataGrid  Grid.Row="1" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedFurColor, Mode=OneWayToSource}" Margin="10,10,10,0"/>
+                <DataGrid  Grid.Row="1" SelectionMode="Single" AutoGenerateColumns="False" ColumnWidth="*"  SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" SelectedItem="{Binding Path=SelectedFurColor, Mode=OneWayToSource}" Margin="10,10,10,0">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID barvy srsti" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="Název barvy srsti" Binding="{Binding FurColorName}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
