--- a/ShelterEvidency/Views/SearchPersonView.xaml
+++ b/ShelterEvidency/Views/SearchPersonView.xaml
@@ -45,6 +45,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SearchValue" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Vyhledávání" TextWrapping="Wrap" Margin="5,5,5,5" Width="400" VerticalContentAlignment="Center"/>
             <Button x:Name="Search" Grid.Column="1" Margin="5" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
@@ -54,9 +55,16 @@
                 Width="24" />
             </Button>
 
-            <Button x:Name="UpdatePeople" Grid.Column="5" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+            <Button x:Name="UpdatePeople" Grid.Column="6" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
                 <materialDesign:PackIcon
                 Kind="Reload"
+                Height="24"
+                Width="24" />
+            </Button>
+
+            <Button x:Name="DeletePerson" Grid.Column="5" IsEnabled="{Binding IsSelected}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                <materialDesign:PackIcon
+                Kind="DeleteForever"
                 Height="24"
                 Width="24" />
             </Button>
