added GUI + logic for delete feature, record editing sections !Enable when !Selected

--- a/ShelterEvidency/Views/GeneralCostsView.xaml
+++ b/ShelterEvidency/Views/GeneralCostsView.xaml
@@ -41,11 +41,18 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                     <ColumnDefinition Width="90"/>
+                    <ColumnDefinition Width="90"/>
                 </Grid.ColumnDefinitions>
 
                 <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
                 <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
 
+                <Button x:Name="DeleteCost" IsEnabled="{Binding IsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <materialDesign:PackIcon
+                Kind="DeleteForever"
+                Height="24"
+                Width="24" />
+                </Button>
 
                 <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
                 x:Name="Filter" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
@@ -77,7 +84,7 @@
         <materialDesign:Card Margin="10"
                     materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-            <Grid>
+            <Grid  IsEnabled="{Binding IsSelected}" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition/>
