--- a/ShelterEvidency/Views/CostsView.xaml
+++ b/ShelterEvidency/Views/CostsView.xaml
@@ -83,7 +83,7 @@
         <materialDesign:Card Margin="10"
                     materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-            <Grid>
+            <Grid  IsEnabled="{Binding IsSelected}" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition/>
